add-ngx-translate

--- a/src/app/formula/create/create.component.html
+++ b/src/app/formula/create/create.component.html
@@ -42,7 +42,7 @@
     </ng-template>
     <ng-template pTemplate="footer">
       <div class="flex justify-content-end flex-wrap">
-        <p-button label="Next Step" [disabled]="!isNumberOfParametersValid" (onClick)="nextPage()"
+        <p-button  [outlined]="true"  label="Next Step" [disabled]="!isNumberOfParametersValid" (onClick)="nextPage()"
           icon="pi pi-angle-right" [rounded]="true"  iconPos="right"></p-button>
       </div>
     </ng-template>
