--- a/src/app/formula/parameter/parameter.component.html
+++ b/src/app/formula/parameter/parameter.component.html
@@ -33,8 +33,8 @@
     </ng-template>
     <ng-template pTemplate="footer">
       <div class="flex justify-content-between flex-wrap">
-        <p-button label="Back" (onClick)="prevPage()" [rounded]="true"  icon="pi pi-angle-left"></p-button>
-        <p-button label="Next Step" (onClick)="nextPage()" [rounded]="true"  icon="pi pi-angle-right" iconPos="right"></p-button>
+        <p-button [outlined]="true"  label="Back" (onClick)="prevPage()" [rounded]="true"  icon="pi pi-angle-left"></p-button>
+        <p-button [outlined]="true"  label="Next Step" (onClick)="nextPage()" [rounded]="true"  icon="pi pi-angle-right" iconPos="right"></p-button>
       </div>
     </ng-template>
   </p-card>
