--- a/src/app/formula/test/test.component.html
+++ b/src/app/formula/test/test.component.html
@@ -13,8 +13,8 @@
     </ng-template>
     <ng-template pTemplate="footer">
         <div class="flex justify-content-between flex-wrap">
-             <p-button label="Back" (onClick)="prevPage()" [rounded]="true"  icon="pi pi-angle-left"></p-button> 
-            <p-button label="Confirm & Save" (onClick)="saveFormula()" [rounded]="true"  ></p-button>
+             <p-button [outlined]="true"  label="Back" (onClick)="prevPage()" [rounded]="true"  icon="pi pi-angle-left"></p-button> 
+            <p-button [outlined]="true"  label="Confirm & Save" (onClick)="saveFormula()" [rounded]="true"  ></p-button>
         </div>
     </ng-template>
 </p-card>
