--- a/src/app/model/add-model/add-model.component.html
+++ b/src/app/model/add-model/add-model.component.html
@@ -118,7 +118,8 @@
        
      
         <div class=" text-center m-3">
-            <button pButton data-dismiss="modal" icon="pi pi-save" class="rounded-input" [disabled]="modelForm.invalid">Add Model</button>
+            <button pButton  data-dismiss="modal" icon="pi pi-plus" class="p-button-outlined rounded-input" [disabled]="modelForm.invalid">Save Model</button>
+            <!-- <p-button  [outlined]="true" data-dismiss="modal" label="Save Model" icon="pi pi-plus" [disabled]="modelForm.invalid" /> -->
         </div>
 
         <!-- <div class="row mb-3 align-items-start">
