--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,20 +1,20 @@
 .nav-link {
   position: relative;
-  color: #fff;
+  color: #000;
   text-decoration: none;
   transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 .nav-link:hover {
-  background-color: #fff;
-  color: #000;
+  background-color: var(--main-color);
+  color: white;
   border-radius: 5px;
-  padding: 10px;
+  
 }
 
-.offcanvas.show {
+/* .offcanvas.show {
   background-color: rgb(5, 6, 22);
-}
+} */
 
 .offcanvas .offcanvas-title {
   color: white;
