--- a/src/app/new-service-master/new-service-master.component.css
+++ b/src/app/new-service-master/new-service-master.component.css
@@ -1,3 +1,31 @@
+.custom-toolbar {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+}
+
+.search-container {
+    flex: 1;
+    min-width: 200px;
+}
+
+.search-input {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.button-group {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+}
+
+
+
 :host ::ng-deep .p-dialog .product-image {
     width: 150px;
     margin: 0 auto 2rem auto;
